# cloudformation-validator

./: .coverage  .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  README.rst.bak  clean.sh  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.eggs/: PyYAML-4.2b4-py2.7-macosx-10.13-intel.egg  prt-1.0.1-py2.7.egg  scandir-1.8-py2.7-macosx-10.13-intel.egg  test-2.3.4.5-py2.7.egg
.eggs/PyYAML-4.2b4-py3.7-macosx-10.13-x86_64.egg/: _yaml.py
.tox/cov-init/: .tox-config1  pip-selfcheck.json
.tox/cov-report/: pip-selfcheck.json
.tox/py27/: .tox-config1  pip-selfcheck.json
.tox/py37/: .tox-config1  pip-selfcheck.json
cloudformation_validator/: CustomRuleLoader.py  IpAddr.py  Policy.py  Profile.py  ProfileLoader.py  RuleDefinition.py  RuleDumper.py  RuleRegistry.py  TemplateDiscovery.py  ValidateUtility.py  Violation.py  __init__.py  command.py
cloudformation_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: Makefile  Profile.rst  ProfileLoader.rst  RuleDefinition.rst  Violation.rst  conf.py  index.rst
test/: test_cloudfront_distribution.py  test_ebs_custom_tags.py  test_ec2_instance.py  test_ec2_instance_custom_tags.py  test_ec2_volume.py  test_elasticloadbalancing_loadbalancer.py  test_iam_user.py  test_ipaddr.py  test_lambda_permission.py  test_rds_custom_tags.py  test_rds_instance.py  test_s3_bucket.py  test_s3_bucket_policy.py  test_s3_custom_tags.py  test_security_group.py  test_skip_tests_rds_instance.py  test_sns_policy.py  test_sqs_policy.py
(+176 files in other folders)
