[bumpversion]
current_version = 0.1.0
commit = True
tag = False

[bumpversion:file:setup.py]

[bumpversion:file:cfn_nagger/__init__.py]

[bumpversion:file:cfn_nagger/command.py]

[metadata]
description-file = README.rst

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']
